[metadata]
name = foambryo
version = 0.3.3
author = Sacha Ichbiah
author_email = sacha.ichbiah@college-de-france.fr
description = Tension inference for 3D cell assemblies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sacha-ichbiah/foambryo
project_urls =
    Team website = https://www.turlierlab.com/
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Intended Audience :: Science/Research
license = CC BY-NC-SA 4.0
[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = delaunay-watershed-3d>=0.3.0
                   networkx>=2.5.1
                   numpy>=1.21.6
                   scipy>=1.4.1
                   torch>=2.2.0
                   trimesh>=3.8.12

[options.extras_require]
viewing = polyscope>=1.2.0
          matplotlib>=3.3.1

[options.packages.find]
where = src
